k8s-networking/deployments/redis-commander-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-commander
  template:
    metadata:
      labels:
        name: redis-commander
    spec:
      containers:
        - name: web
          image: rediscommander/redis-commander
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
