k8s-networking/deployments/redis-commander-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: redis-commander
  name: redis-commander
spec:
  ports:
    - port: 8080
      targetPort: 8081
  selector:
    name: redis-commander
